css/styles.css
.jumbotron {
    background: white;
    padding-top: 0.5rem;
    padding-bottom: 0rem;
}

/*Add SCSS later to make nested child rules*/
#header-logo {
    width: 90%;
    height: auto;
    margin-top: none;
}

body {
    font-family: 'Nunito', sans-serif;
}

.navbar {
    font-size: 1.2em;
    margin: 3rem;
}

.navbar:hover {
    color: white;
}

.nav-item:hover {
    background-color:#920011;
}

p {
    font-size: 19px;
}



/* First Banner */

#banner {
    background-image: url('/images/tavern.jpg');
    height: 35rem;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background: cover;
    background-position: right;
    border-radius: 5px;
    }

/* 2nd Banner */

#banner2 {
    background-image: url('/images/crystal2.jpg');
    background-color: black;
    height: 21rem;
    background-attachment: fixed;
    background-position: top;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    border-radius: 5px;
    }


    #quizBanner {
        background-image: url('/images/112225.jpg');
        height: 35rem;
        background-attachment: fixed;
        background-position: top;
        background-repeat: no-repeat;
        background-size: cover;
        position: relative;
        border-radius: 5px;
        }

h1 {
    padding-top: 2rem;
    padding-bottom: 1rem;

}


/* CSS rules for basic spacing*/ 

.text-spacing {
    padding: 2rem 20rem 0rem 20rem;
}

.card-img-overlay {
    opacity: 50%;
}

.card-black {
    background-color: black;
}

.btn {
    font-size: 1.2rem;
    font-family: 'Nunito', sans-serif;
    font-weight: bold;
}

btn:hover {
    background: #920011;
    color: white;
}

.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
    color: white;
}
.navbar-light .navbar-nav .nav-link {
    color: black;
}

.navbar-light .navbar-brand {
    color: rgba(0,0,0,.9);
    margin:1rem;
}

a {
    font-size: 1.2rem;
    font-family: 'Nunito', sans-serif;
    font-weight: bold;
    color: #920011;
}

a:hover {
    color: #920011;
    text-decoration: none;
}

#quiz-btn {
    background-color: white;
    opacity: 100%;
    height: 5rem;
    width: 16rem;
    z-index: 1;
    text-align: center;
    margin: auto;
}


#quiz-btn:hover {
    background: #920011;
    color: white;
}

.border-top {
    border-top: 5px solid #920011!important;
}

.selector {
    margin: 40rem;
}

.question-margin {
    margin-bottom: 2rem;
}

.playstyle-padding {
    padding: 1rem;
}

.par-margin {
    margin-bottom: 3rem;
}

